--- a/Localization/es_ES.xaml
+++ b/Localization/es_ES.xaml
@@ -38,37 +38,37 @@
     <sys:String x:Key="LOCSucessStoryGameUnlockedByMonth">Graphic with all unlocked achievements by Day</sys:String>
 
     <sys:String x:Key="LOCSucessStoryDefaultSorting">Default sorting</sys:String>
-    <sys:String x:Key="LOCSucessStoryIsAsc">Ascending</sys:String>
+    <sys:String x:Key="LOCMenuSortAscending">Ascending</sys:String>
 
     <sys:String x:Key="LOCSucessStoryDatabase">Database manipulation</sys:String>
     <sys:String x:Key="LOCSuccessStoryGetData">Get data</sys:String>
     <sys:String x:Key="LOCSuccessStoryRefreshData">Refresh data</sys:String>
-    <sys:String x:Key="LOCSucessStoryRefreshData">Actualizar datos</sys:String>
+    <sys:String x:Key="LOCSuccessStoryRefreshData">Actualizar datos</sys:String>
     <sys:String x:Key="LOCSucessStoryGetMissing">Get missing</sys:String>
     <sys:String x:Key="LOCSucessStoryGetDataRecent">Missing recent achievements</sys:String>
     <sys:String x:Key="LOCSucessStoryRefreshAllDataRecent">Actualizar todos los datos de logros recientes</sys:String>
     <sys:String x:Key="LOCSucessStoryRefreshAllData">Actualizar todos los datos de logros</sys:String>
     <sys:String x:Key="LOCSucessStoryGetAllData">All missing achievements</sys:String>
     <sys:String x:Key="LOCSucessStoryGetDataInstalled">Missing from installed games</sys:String>
-    <sys:String x:Key="LOCSucessStoryRefreshDataInstalledRecent">Achievements from installed games</sys:String>
+    <sys:String x:Key="LOCSuccessStoryRefreshDataInstalledRecent">Achievements from installed games</sys:String>
 
     <sys:String x:Key="LOCSucessStoryIntegration">Interface integration</sys:String>
-    <sys:String x:Key="LOCSucessStoryIntegrationInDescription">On game description</sys:String>
-    <sys:String x:Key="LOCSucessStoryIntegrationInDescriptionWithToggle">With toggle button</sys:String>
-    <sys:String x:Key="LOCSucessStoryIntegrationShowTitle">Show title</sys:String>
+    <sys:String x:Key="LOCCommonIntegrationInDescription">On game description</sys:String>
+    <sys:String x:Key="LOCCommonIntegrationButtonIsToggle">With toggle button</sys:String>
+    <sys:String x:Key="LOCCommonIntegrationShowTitle">Show title</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationShowGraphic">Show graphic</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationShowAchievements">Show list achievements</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationTopGameDetails">Above description</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationToggleDetails">Toggle button with details</sys:String>
-    <sys:String x:Key="LOCSucessStoryIntegrationInCustomTheme">Custom theme integration (if integrated)</sys:String>
-    <sys:String x:Key="LOCSucessStoryIntegrationButton">Add button</sys:String>
-    <sys:String x:Key="LOCSucessStoryIntegrationButtonDetails">Add button with details</sys:String>
-    <sys:String x:Key="LOCSucessStoryIntegrationButtonHeader">Add button in window</sys:String>
+    <sys:String x:Key="LOCCommonIntegrationInCustomTheme">Custom theme integration (if integrated)</sys:String>
+    <sys:String x:Key="LOCCommonIntegrationButton">Add button</sys:String>
+    <sys:String x:Key="LOCCommonIntegrationButtonDetails">Add button with details</sys:String>
+    <sys:String x:Key="LOCCommonIntegrationButtonHeader">Add button in window</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationShowProgressBar">Show progress bar</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationShowAchievementsCompactUnlocked">Show compact unlocked list</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationShowAchievementsCompactLocked">Show compact locked list</sys:String>
 
-    <sys:String x:Key="LOCSucessStoryIntegrationOptions">Selection elements</sys:String>
+    <sys:String x:Key="LOCCommonIntegrationSelectElements">Selection elements</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationGraphicOptions">Graphic options</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationGraphicOptionsCountAbscissa">Number of data in abscissa</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationGraphicShowLabels">Show abscissa label</sys:String>
@@ -78,17 +78,17 @@
     <sys:String x:Key="LOCSucessStoryIntegrationProgressBarShowPercent">Show percent</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationListOptions">List achievements options</sys:String>
 
-    <sys:String x:Key="LOCSucessStoryRefreshDataMessage">La base de datos de logros se ha restablecido.</sys:String>
+    <sys:String x:Key="LOCSuccessStoryRefreshDataMessage">La base de datos de logros se ha restablecido.</sys:String>
 
     <sys:String x:Key="LOCSucessStoryGetMissingToolTip" xml:space="preserve">Get the game achievements weren't downloaded in this store.&#x0a;(use if the first number count is different to second)</sys:String>
-    <sys:String x:Key="LOCSucessStoryRefreshDataToolTip" xml:space="preserve">Reset and download achievements for all games in this store.&#x0a;(use if there are some problems with achievements)</sys:String>
+    <sys:String x:Key="LOCSuccessStoryRefreshDataToolTip" xml:space="preserve">Reset and download achievements for all games in this store.&#x0a;(use if there are some problems with achievements)</sys:String>
 
     <sys:String x:Key="LOCSucessStoryGetDataRecentToolTip" xml:space="preserve">Get the game achievements weren't downloaded in slippery month.&#x0a;(use if the first number count is different to second)</sys:String>
     <sys:String x:Key="LOCSucessStoryGetDataInstalledToolTip" xml:space="preserve">Get the game achievements weren't downloaded for installed games.&#x0a;(use if the first number count is different to second)</sys:String>
     <sys:String x:Key="LOCSucessStoryGetAllDataToolTip" xml:space="preserve">Get the game achievements weren't downloaded.&#x0a;(use if the first number count is different to second)</sys:String>
 
     <sys:String x:Key="LOCSucessStoryRefreshAllDataRecentToolTip" xml:space="preserve">Reset and download achievements in slippery month.&#x0a;(use if there are some problems with achievements)</sys:String>
-    <sys:String x:Key="LOCSucessStoryRefreshDataInstalledRecentToolTip" xml:space="preserve">Reset and download achievements for installed games.&#x0a;(use if there are some problems with achievements)</sys:String>
+    <sys:String x:Key="LOCSuccessStoryRefreshDataInstalledRecentToolTip" xml:space="preserve">Reset and download achievements for installed games.&#x0a;(use if there are some problems with achievements)</sys:String>
     <sys:String x:Key="LOCSucessStoryRefreshAllDataToolTip" xml:space="preserve">Reset and download achievements for all games.&#x0a;(use if there are some problems with achievements)</sys:String>
 
     <!-- 
@@ -97,16 +97,16 @@
 
     <!-- UI -->
     <sys:String x:Key="LOCSucessStoryFilterSource">Filter by source</sys:String>
-    <sys:String x:Key="LOCSucessStorySearch">Buscar</sys:String>
+    <sys:String x:Key="LOCSearchLabel">Buscar</sys:String>
     <sys:String x:Key="LOCSucessStoryGlobalProgression">Progresión global</sys:String>
     <sys:String x:Key="LOCSucessStoryProgressionLaunched">Progression [games launched]</sys:String>
     <sys:String x:Key="LOCSucessStoryGameInformation">Información</sys:String>
 
     <!-- ListViewGames -->
-    <sys:String x:Key="LOCSucessStorylvGamesIcon">Icono</sys:String>
-    <sys:String x:Key="LOCSucessStorylvGamesName">Nombre</sys:String>
-    <sys:String x:Key="LOCSucessStorylvGamesLastActivity">Última sesión iniciada</sys:String>
-    <sys:String x:Key="LOCSucessStorylvGamesSourceName">Fuente</sys:String>
+    <sys:String x:Key="LOCGameIconTitle">Icono</sys:String>
+    <sys:String x:Key="LOCGameNameTitle">Nombre</sys:String>
+    <sys:String x:Key="LOCLastPlayed">Última sesión iniciada</sys:String>
+    <sys:String x:Key="LOCSourceLabel">Fuente</sys:String>
     <sys:String x:Key="LOCSucessStorylvGamesProgression">Progresión</sys:String>
 
     <sys:String x:Key="LOCSucessStoryGraphicTitleALL">Todos los logros desbloqueados por mes</sys:String>
