--- a/Localization/fr_FR.xaml
+++ b/Localization/fr_FR.xaml
@@ -38,37 +38,37 @@
     <sys:String x:Key="LOCSucessStoryGameUnlockedByMonth">Graphique avec tous les achievements par jour</sys:String>
 
     <sys:String x:Key="LOCSucessStoryDefaultSorting">Trie par défaut</sys:String>
-    <sys:String x:Key="LOCSucessStoryIsAsc">Ascendant</sys:String>
+    <sys:String x:Key="LOCMenuSortAscending">Ascendant</sys:String>
 
     <sys:String x:Key="LOCSucessStoryDatabase">Manipulation base de données</sys:String>
     <sys:String x:Key="LOCSuccessStoryGetData">Récupérer les données</sys:String>
     <sys:String x:Key="LOCSuccessStoryRefreshData">Rafraichir les données</sys:String>
-    <sys:String x:Key="LOCSucessStoryRefreshData">Rafraîchir</sys:String>
+    <sys:String x:Key="LOCSuccessStoryRefreshData">Rafraîchir</sys:String>
     <sys:String x:Key="LOCSucessStoryGetMissing">Manquants</sys:String>
     <sys:String x:Key="LOCSucessStoryGetDataRecent">Les récents manquants</sys:String>
     <sys:String x:Key="LOCSucessStoryRefreshAllDataRecent">Tous les récents</sys:String>
     <sys:String x:Key="LOCSucessStoryRefreshAllData">Tous les succès</sys:String>
     <sys:String x:Key="LOCSucessStoryGetAllData">Tous les manquants</sys:String>
     <sys:String x:Key="LOCSucessStoryGetDataInstalled">Manquants des jeux installés</sys:String>
-    <sys:String x:Key="LOCSucessStoryRefreshDataInstalledRecent">Succès pour les jeux installés</sys:String>
+    <sys:String x:Key="LOCSuccessStoryRefreshDataInstalledRecent">Succès pour les jeux installés</sys:String>
 
     <sys:String x:Key="LOCSucessStoryIntegration">Intégration dans l'interface</sys:String>
-    <sys:String x:Key="LOCSucessStoryIntegrationInDescription">Dans la description du jeu</sys:String>
-    <sys:String x:Key="LOCSucessStoryIntegrationInDescriptionWithToggle">Avec un bouton à bascule</sys:String>
-    <sys:String x:Key="LOCSucessStoryIntegrationShowTitle">Afficher le titre</sys:String>
+    <sys:String x:Key="LOCCommonIntegrationInDescription">Dans la description du jeu</sys:String>
+    <sys:String x:Key="LOCCommonIntegrationButtonIsToggle">Avec un bouton à bascule</sys:String>
+    <sys:String x:Key="LOCCommonIntegrationShowTitle">Afficher le titre</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationShowGraphic">Afficher le graphique</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationShowAchievements">Afficher la liste des succès</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationTopGameDetails">Au dessus de la description</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationToggleDetails">Bouton à bascule avec détails</sys:String>
-    <sys:String x:Key="LOCSucessStoryIntegrationInCustomTheme">Intgération dans les thèmes personnalisés (si intégré)</sys:String>
-    <sys:String x:Key="LOCSucessStoryIntegrationButton">Ajouter un bouton</sys:String>
-    <sys:String x:Key="LOCSucessStoryIntegrationButtonDetails">Ajouter un bouton avec détails</sys:String>
-    <sys:String x:Key="LOCSucessStoryIntegrationButtonHeader">Ajouter un bouton dans la fenêtre</sys:String>
+    <sys:String x:Key="LOCCommonIntegrationInCustomTheme">Intgération dans les thèmes personnalisés (si intégré)</sys:String>
+    <sys:String x:Key="LOCCommonIntegrationButton">Ajouter un bouton</sys:String>
+    <sys:String x:Key="LOCCommonIntegrationButtonDetails">Ajouter un bouton avec détails</sys:String>
+    <sys:String x:Key="LOCCommonIntegrationButtonHeader">Ajouter un bouton dans la fenêtre</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationShowProgressBar">Afficher une barre de progression</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationShowAchievementsCompactUnlocked">Afficher list compact déverrouillé</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationShowAchievementsCompactLocked">Afficher list compact verrouillé</sys:String>
 
-    <sys:String x:Key="LOCSucessStoryIntegrationOptions">Sélection des élements</sys:String>
+    <sys:String x:Key="LOCCommonIntegrationSelectElements">Sélection des élements</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationGraphicOptions">Options du graphique</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationGraphicOptionsCountAbscissa">Nombre de données en abscisse</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationGraphicShowLabels">Afficher les noms sur l'abscisse</sys:String>
@@ -78,17 +78,17 @@
     <sys:String x:Key="LOCSucessStoryIntegrationProgressBarShowPercent">Afficher les pourcentage</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationListOptions">Options de la liste des succès</sys:String>
 
-    <sys:String x:Key="LOCSucessStoryRefreshDataMessage">La base de données des succès a bien été réinitialisées.</sys:String>
+    <sys:String x:Key="LOCSuccessStoryRefreshDataMessage">La base de données des succès a bien été réinitialisées.</sys:String>
 
     <sys:String x:Key="LOCSucessStoryGetMissingToolTip" xml:space="preserve">Récupérer les succès non téléchargés du store.&#x0a;(A utiliser si le premier nombre est différent du deuxième)</sys:String>
-    <sys:String x:Key="LOCSucessStoryRefreshDataToolTip" xml:space="preserve">Mise à zéro et téléchargement des succès du store.&#x0a;(A utiliser s'il y a des problèmes avec les succès)</sys:String>
+    <sys:String x:Key="LOCSuccessStoryRefreshDataToolTip" xml:space="preserve">Mise à zéro et téléchargement des succès du store.&#x0a;(A utiliser s'il y a des problèmes avec les succès)</sys:String>
 
     <sys:String x:Key="LOCSucessStoryGetDataRecentToolTip" xml:space="preserve">Récupérer les succès non téléchargés sur un mois glissant.&#x0a;(A utiliser si le premier nombre est différent du deuxième)</sys:String>
     <sys:String x:Key="LOCSucessStoryGetDataInstalledToolTip" xml:space="preserve">Récupérer les succès non téléchargés pour les jeux installés.&#x0a;(A utiliser si le premier nombre est différent du deuxième)</sys:String>
     <sys:String x:Key="LOCSucessStoryGetAllDataToolTip" xml:space="preserve">Récupérer les succès non téléchargés.&#x0a;(A utiliser si le premier nombre est différent du deuxième)</sys:String>
 
     <sys:String x:Key="LOCSucessStoryRefreshAllDataRecentToolTip" xml:space="preserve">Mise à zéro et téléchargement des succès sur un mois glissant.&#x0a;(A utiliser s'il y a des problèmes avec les succès)</sys:String>
-    <sys:String x:Key="LOCSucessStoryRefreshDataInstalledRecentToolTip" xml:space="preserve">Mise à zéro et téléchargement des succès pour les jeux installés.&#x0a;(A utiliser s'il y a des problèmes avec les succès)</sys:String>
+    <sys:String x:Key="LOCSuccessStoryRefreshDataInstalledRecentToolTip" xml:space="preserve">Mise à zéro et téléchargement des succès pour les jeux installés.&#x0a;(A utiliser s'il y a des problèmes avec les succès)</sys:String>
     <sys:String x:Key="LOCSucessStoryRefreshAllDataToolTip" xml:space="preserve">Mise à zéro et téléchargement des succès pour tous les jeux.&#x0a;(A utiliser s'il y a des problèmes avec les succès)</sys:String>
 
     <!-- 
@@ -97,16 +97,16 @@
 
     <!-- UI -->
     <sys:String x:Key="LOCSucessStoryFilterSource">Filtrer par source</sys:String>
-    <sys:String x:Key="LOCSucessStorySearch">Recherche</sys:String>
+    <sys:String x:Key="LOCSearchLabel">Recherche</sys:String>
     <sys:String x:Key="LOCSucessStoryGlobalProgression">Progression globale</sys:String>
     <sys:String x:Key="LOCSucessStoryProgressionLaunched">Progression [jeux lancés]</sys:String>
     <sys:String x:Key="LOCSucessStoryGameInformation">Information</sys:String>
 
     <!-- ListViewGames -->
-    <sys:String x:Key="LOCSucessStorylvGamesIcon">Icône</sys:String>
-    <sys:String x:Key="LOCSucessStorylvGamesName">Name</sys:String>
-    <sys:String x:Key="LOCSucessStorylvGamesLastActivity">Dernière session</sys:String>
-    <sys:String x:Key="LOCSucessStorylvGamesSourceName">Source</sys:String>
+    <sys:String x:Key="LOCGameIconTitle">Icône</sys:String>
+    <sys:String x:Key="LOCGameNameTitle">Name</sys:String>
+    <sys:String x:Key="LOCLastPlayed">Dernière session</sys:String>
+    <sys:String x:Key="LOCSourceLabel">Source</sys:String>
     <sys:String x:Key="LOCSucessStorylvGamesProgression">Progression</sys:String>
 
     <sys:String x:Key="LOCSucessStoryGraphicTitleALL">Tous les succès obtenus par mois</sys:String>
