--- a/Localization/pl_PL.xaml
+++ b/Localization/pl_PL.xaml
@@ -38,37 +38,37 @@
     <sys:String x:Key="LOCSucessStoryGameUnlockedByMonth">Grafika ze wszystkimi odblokowanymi osiągnięciami według dnia</sys:String>
 
     <sys:String x:Key="LOCSucessStoryDefaultSorting">Sortowanie domyślne</sys:String>
-    <sys:String x:Key="LOCSucessStoryIsAsc">Rosnąco</sys:String>
+    <sys:String x:Key="LOCMenuSortAscending">Rosnąco</sys:String>
 
     <sys:String x:Key="LOCSucessStoryDatabase">Manipulacja bazą danych</sys:String>
     <sys:String x:Key="LOCSuccessStoryGetData">Wczytaj dane</sys:String>
     <sys:String x:Key="LOCSuccessStoryRefreshData">Odśwież dane</sys:String>
-    <sys:String x:Key="LOCSucessStoryRefreshData">Odśwież dane</sys:String>
+    <sys:String x:Key="LOCSuccessStoryRefreshData">Odśwież dane</sys:String>
     <sys:String x:Key="LOCSucessStoryGetMissing">Wczytaj brakujące</sys:String>
     <sys:String x:Key="LOCSucessStoryGetDataRecent">Brakujące najnowsze osiągnięcia</sys:String>
     <sys:String x:Key="LOCSucessStoryRefreshAllDataRecent">Wszystkie najnowsze osiągnięcia</sys:String>
     <sys:String x:Key="LOCSucessStoryRefreshAllData">Wszystkie osiągnięcia</sys:String>
     <sys:String x:Key="LOCSucessStoryGetAllData">Wszystkie brakujące osiągnięcia</sys:String>
     <sys:String x:Key="LOCSucessStoryGetDataInstalled">Brakujące spośród zainstalowanych gier</sys:String>
-    <sys:String x:Key="LOCSucessStoryRefreshDataInstalledRecent">Osiągnięcia z zainstalowanych gier</sys:String>
+    <sys:String x:Key="LOCSuccessStoryRefreshDataInstalledRecent">Osiągnięcia z zainstalowanych gier</sys:String>
 
     <sys:String x:Key="LOCSucessStoryIntegration">Integracja interfejsu</sys:String>
-    <sys:String x:Key="LOCSucessStoryIntegrationInDescription">W opisie gry</sys:String>
-    <sys:String x:Key="LOCSucessStoryIntegrationInDescriptionWithToggle">Z przyciskiem przełączającym</sys:String>
-    <sys:String x:Key="LOCSucessStoryIntegrationShowTitle">Wyświetlaj tytuł</sys:String>
+    <sys:String x:Key="LOCCommonIntegrationInDescription">W opisie gry</sys:String>
+    <sys:String x:Key="LOCCommonIntegrationButtonIsToggle">Z przyciskiem przełączającym</sys:String>
+    <sys:String x:Key="LOCCommonIntegrationShowTitle">Wyświetlaj tytuł</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationShowGraphic">Wyświetlaj grafikę</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationShowAchievements">Wyświetlaj listę osiągnięć</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationTopGameDetails">Nad opisem</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationToggleDetails">Przełącznik ze szczegółami</sys:String>
-    <sys:String x:Key="LOCSucessStoryIntegrationInCustomTheme">Integracja z niestandardowym motywem (jeśli jest zintegrowany)</sys:String>
-    <sys:String x:Key="LOCSucessStoryIntegrationButton">Dodaj przycisk</sys:String>
-    <sys:String x:Key="LOCSucessStoryIntegrationButtonDetails">Dodaj przycisk ze szczegółami</sys:String>
-    <sys:String x:Key="LOCSucessStoryIntegrationButtonHeader">Dodaj przycisk w oknie</sys:String>
+    <sys:String x:Key="LOCCommonIntegrationInCustomTheme">Integracja z niestandardowym motywem (jeśli jest zintegrowany)</sys:String>
+    <sys:String x:Key="LOCCommonIntegrationButton">Dodaj przycisk</sys:String>
+    <sys:String x:Key="LOCCommonIntegrationButtonDetails">Dodaj przycisk ze szczegółami</sys:String>
+    <sys:String x:Key="LOCCommonIntegrationButtonHeader">Dodaj przycisk w oknie</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationShowProgressBar">Wyświetlaj pasek postępu</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationShowAchievementsCompactUnlocked">Show compact unlocked list</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationShowAchievementsCompactLocked">Show compact locked list</sys:String>
 
-    <sys:String x:Key="LOCSucessStoryIntegrationOptions">Selection elements</sys:String>
+    <sys:String x:Key="LOCCommonIntegrationSelectElements">Selection elements</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationGraphicOptions">Graphic options</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationGraphicOptionsCountAbscissa">Number of data in abscissa</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationGraphicShowLabels">Show abscissa label</sys:String>
@@ -78,17 +78,17 @@
     <sys:String x:Key="LOCSucessStoryIntegrationProgressBarShowPercent">Z procentem</sys:String>
     <sys:String x:Key="LOCSucessStoryIntegrationListOptions">List achievements options</sys:String>
 
-    <sys:String x:Key="LOCSucessStoryRefreshDataMessage">Baza danych osiągnieć została zresetowana.</sys:String>
+    <sys:String x:Key="LOCSuccessStoryRefreshDataMessage">Baza danych osiągnieć została zresetowana.</sys:String>
 
     <sys:String x:Key="LOCSucessStoryGetMissingToolTip" xml:space="preserve">Wczytuje osiągniecia, które nie zostały pobrane z tego sklepu.&#x0a;(skorzystaj z tego, jeśli pierwsza liczba jest inna niż druga)</sys:String>
-    <sys:String x:Key="LOCSucessStoryRefreshDataToolTip" xml:space="preserve">Resetuje i pobiera osiągnięcia dla wszystkich gier z tego sklepu.&#x0a;(skorzystaj z tego, jeżeli są problemy z osiągnięciami)</sys:String>
+    <sys:String x:Key="LOCSuccessStoryRefreshDataToolTip" xml:space="preserve">Resetuje i pobiera osiągnięcia dla wszystkich gier z tego sklepu.&#x0a;(skorzystaj z tego, jeżeli są problemy z osiągnięciami)</sys:String>
     
     <sys:String x:Key="LOCSucessStoryGetDataRecentToolTip" xml:space="preserve">Wczytuje osiągnięcia, które nie zostały pobrane w śliskim miesiącu.&#x0a;(skorzystaj z tego, jeśli pierwsza liczba jest inna niż druga)</sys:String>
     <sys:String x:Key="LOCSucessStoryGetDataInstalledToolTip" xml:space="preserve">Wczytuje osiągnięcia, które nie zostały pobrane dla zainstalowanych gier.&#x0a;(skorzystaj z tego, jeśli pierwsza liczba jest inna niż druga)</sys:String>
     <sys:String x:Key="LOCSucessStoryGetAllDataToolTip" xml:space="preserve">Wczytuje osiągnięcia, które nie zostały pobrane.&#x0a;(skorzystaj z tego, jeśli pierwsza liczba jest inna niż druga)</sys:String>
 
     <sys:String x:Key="LOCSucessStoryRefreshAllDataRecentToolTip" xml:space="preserve">Resetuje i pobiera osiągnięcia w śliskim miesiącu.&#x0a;(skorzystaj z tego, jeżeli są problemy z osiągnięciami)</sys:String>
-    <sys:String x:Key="LOCSucessStoryRefreshDataInstalledRecentToolTip" xml:space="preserve">Resetuje i pobiera osiągnięcia dla wszystkich zainstalowanych gier.&#x0a;(skorzystaj z tego, jeżeli są problemy z osiągnięciami)</sys:String>
+    <sys:String x:Key="LOCSuccessStoryRefreshDataInstalledRecentToolTip" xml:space="preserve">Resetuje i pobiera osiągnięcia dla wszystkich zainstalowanych gier.&#x0a;(skorzystaj z tego, jeżeli są problemy z osiągnięciami)</sys:String>
     <sys:String x:Key="LOCSucessStoryRefreshAllDataToolTip" xml:space="preserve">Resetuje i pobiera osiągnięcia dla wszystkich gier.&#x0a;(skorzystaj z tego, jeżeli są problemy z osiągnięciami)</sys:String>
 
     <!-- 
@@ -97,16 +97,16 @@
 
     <!-- UI -->
     <sys:String x:Key="LOCSucessStoryFilterSource">Filtruj wg źródła</sys:String>
-    <sys:String x:Key="LOCSucessStorySearch">Szukaj</sys:String>
+    <sys:String x:Key="LOCSearchLabel">Szukaj</sys:String>
     <sys:String x:Key="LOCSucessStoryGlobalProgression">Ogólny postęp</sys:String>
     <sys:String x:Key="LOCSucessStoryProgressionLaunched">Progression [games launched]</sys:String>
     <sys:String x:Key="LOCSucessStoryGameInformation">Informacja</sys:String>
 
     <!-- ListViewGames -->
-    <sys:String x:Key="LOCSucessStorylvGamesIcon">Ikona</sys:String>
-    <sys:String x:Key="LOCSucessStorylvGamesName">Nazwa</sys:String>
-    <sys:String x:Key="LOCSucessStorylvGamesLastActivity">Ostatnia sesja</sys:String>
-    <sys:String x:Key="LOCSucessStorylvGamesSourceName">Źródło</sys:String>
+    <sys:String x:Key="LOCGameIconTitle">Ikona</sys:String>
+    <sys:String x:Key="LOCGameNameTitle">Nazwa</sys:String>
+    <sys:String x:Key="LOCLastPlayed">Ostatnia sesja</sys:String>
+    <sys:String x:Key="LOCSourceLabel">Źródło</sys:String>
     <sys:String x:Key="LOCSucessStorylvGamesProgression">Postęp</sys:String>
 
     <sys:String x:Key="LOCSucessStoryGraphicTitleALL">Wszystkie odblokowane osiągnięcia według miesiąca</sys:String>
