--- a/Views/SuccessStoryView.xaml
+++ b/Views/SuccessStoryView.xaml
@@ -1,21 +1,19 @@
-﻿<Window x:Class="SuccessStory.SuccessView"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-        xmlns:local="clr-namespace:SuccessStory"
-        xmlns:localLVC="clr-namespace:PluginCommon.LiveChartsCommon;assembly=PluginCommon"
-        xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
-        xmlns:localPlugin="clr-namespace:PluginCommon;assembly=PluginCommon"
-        mc:Ignorable="d" Height="760" Width="1280" Background="{DynamicResource WindowBackgourndBrush}"
-        Title="Success Story"              
-        ResizeMode="NoResize" WindowStartupLocation="CenterScreen" WindowStyle="SingleBorderWindow">
+﻿<UserControl x:Class="SuccessStory.SuccessView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:SuccessStory"
+             xmlns:localLVC="clr-namespace:PluginCommon.LiveChartsCommon;assembly=PluginCommon"
+             xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
+             xmlns:localPlugin="clr-namespace:PluginCommon;assembly=PluginCommon"
+             mc:Ignorable="d" Height="740" Width="1280" Background="{DynamicResource WindowBackgourndBrush}">
 
-    <Window.Resources>
+    <UserControl.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
         <localPlugin:LocalDateTimeConverter x:Key="LocalDateTimeConverter" />
         <FontFamily x:Key="font">pack://application:,,,/PluginCommon;component/Resources/font.ttf#font</FontFamily>
-    </Window.Resources>
+    </UserControl.Resources>
 
     <Grid Margin="10">
         <Grid Name="PART_DataLoad">
@@ -222,4 +220,4 @@
             </DockPanel>
         </Grid>
     </Grid>
-</Window>
+</UserControl>
